test/ui/tests/unrecognized-known-binding.stderr
error[E063]: `I-Am-Definitely-Unknown` is not a known binding
 --> ${DIRECTORY}/unrecognized-known-binding.lushui:3:1
  |
3 | @known
  | ------ 
  |
 --> ${DIRECTORY}/unrecognized-known-binding.lushui:4:6
  |
4 | data I-Am-Definitely-Unknown: Type of
  |      ^^^^^^^^^^^^^^^^^^^^^^^ 
  |

error: aborting due to previous error
 note: the error E063 has a detailed explanation
 help: run `lushui explain E063` to view it

